fix: 修复前端Docker构建路径问题
- 修正Dockerfile中的COPY指令路径
- 明确指定public、src和tsconfig.json的复制路径
- 解决服务器上构建时找不到index.html的问题
- 添加构建验证脚本和修复说明文档

--- a/docker/frontend/Dockerfile.debug
+++ b/docker/frontend/Dockerfile.debug
@@ -16,8 +16,10 @@ COPY frontend/package*.json ./
 # 安装所有依赖（包括开发依赖，用于构建）
 RUN npm ci
 
-# 复制源代码
-COPY frontend/ ./
+# 复制源代码 - 注意public和src在frontend目录下
+COPY frontend/public ./public
+COPY frontend/src ./src
+COPY frontend/tsconfig.json ./
 
 # 调试：列出文件结构
 RUN echo "=== Current directory structure ===" && \
