--- a/.gitignore
+++ b/.gitignore
@@ -113,7 +113,7 @@ dist
 
 # Gatsby files
 .cache/
-public
+# public - commented out to allow frontend/public directory
 
 # Storybook build outputs
 .out
