fix: 修复WebSocket认证中间件导致的连接失败问题
问题原因：
- WebSocket认证中间件在认证失败时返回JSON响应
- JSON响应会破坏WebSocket握手过程，导致连接失败

修改内容：
1. 修改WebSocketAuthMiddleware，对WebSocket请求使用AbortWithStatus
2. 更新生产环境配置文件，使用正确的端口8088
3. 更新Docker配置说明

这解决了监控WebSocket无法连接的问题

--- a/.env.docker
+++ b/.env.docker
@@ -16,7 +16,7 @@
 #    不需要设置，默认使用nginx反向代理
 #
 # 3. 部署在云服务器（前后端分离）：
-#    REACT_APP_API_URL=http://47.115.133.178:8088
+#    REACT_APP_API_URL=http://47.115.133.178:8088  # 注意：8088是Docker对外暴露的端口
 #
 # 4. 使用域名：
 #    REACT_APP_API_URL=https://api.bastion.example.com
