--- a/frontend/.env.production
+++ b/frontend/.env.production
@@ -1,7 +1,7 @@
 # Production environment configuration
 # API服务器地址配置
-# 使用IP地址：
-REACT_APP_API_URL=http://47.115.133.178:8080
+# 使用IP地址（注意：Docker对外暴露的是8088端口）：
+REACT_APP_API_URL=http://47.115.133.178:8088
 
 # 未来使用域名时，修改为：
 # REACT_APP_API_URL=https://api.bastion.example.com
