--- a/.env.docker
+++ b/.env.docker
@@ -2,27 +2,26 @@
 # 用于配置Bastion系统的Docker部署
 
 # ========================================
-# 前端配置
+# 重要说明
+# ========================================
+# 
+# 本配置已优化：
+# 1. 后端不再对外暴露端口（移除了8088）
+# 2. 所有请求通过nginx统一入口（8080端口）
+# 3. 内部服务使用Docker服务名通信
+#
+# ========================================
+# 前端配置（通常不需要修改）
 # ========================================
 
-# API服务器地址配置（用于前端访问后端）
-# 注意：这个地址是浏览器访问的地址，不是Docker内部地址
+# Docker Compose部署时不需要设置API_URL
+# nginx会自动代理/api/和/ws/请求到后端
 # 
-# 示例配置：
-# 1. 本地开发（Docker Compose默认）：
-#    不需要设置，默认使用nginx反向代理
-#
-# 2. 部署在单机（前后端同域）：
-#    不需要设置，默认使用nginx反向代理
-#
-# 3. 部署在云服务器（前后端分离）：
-#    REACT_APP_API_URL=http://47.115.133.178:8088  # 注意：8088是Docker对外暴露的端口
-#
-# 4. 使用域名：
-#    REACT_APP_API_URL=https://api.bastion.example.com
-#
-# 取消下面的注释并修改为实际的后端地址：
-# REACT_APP_API_URL=http://your-backend-server:port
+# 仅在特殊情况下需要设置：
+# - 前后端完全分离部署
+# - 不使用nginx代理
+# 
+# REACT_APP_API_URL=
 
 # ========================================
 # 其他配置（预留）
