--- a/frontend/.env.production
+++ b/frontend/.env.production
@@ -1,7 +1,10 @@
 # Production environment configuration
-# API服务器地址配置
-# 使用IP地址（注意：Docker对外暴露的是8088端口）：
-REACT_APP_API_URL=http://47.115.133.178:8088
+# 使用Docker Compose部署时，不需要设置REACT_APP_API_URL
+# nginx会自动代理所有/api/和/ws/请求到后端
 
-# 未来使用域名时，修改为：
-# REACT_APP_API_URL=https://api.bastion.example.com
+# 仅在以下情况需要设置：
+# 1. 前后端分离部署（不使用nginx代理）
+# 2. 需要直接访问后端API
+# 
+# 示例：
+# REACT_APP_API_URL=http://api.example.com:8080
