--- a/docker/frontend/nginx.conf
+++ b/docker/frontend/nginx.conf
@@ -15,10 +15,33 @@ server {
     add_header X-Content-Type-Options "nosniff" always;
     add_header X-XSS-Protection "1; mode=block" always;
 
-    # WebSocket代理 - 优先匹配，修复/api/v1/ws/路径问题
-    # 使用正则表达式匹配所有包含/ws/的路径
-    location ~ /ws/ {
-        proxy_pass http://backend:8080;  # 使用服务名而不是IP
+    # WebSocket代理 - 监控WebSocket
+    location /api/v1/ws/monitor {
+        proxy_pass http://backend:8080/api/v1/ws/monitor;
+        proxy_http_version 1.1;
+        
+        # WebSocket必需的头部
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "upgrade";
+        
+        # 标准代理头部
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        
+        # WebSocket超时设置（1小时）
+        proxy_read_timeout 3600s;
+        proxy_send_timeout 3600s;
+        proxy_connect_timeout 60s;
+        
+        # 禁用缓冲以支持实时通信
+        proxy_buffering off;
+    }
+    
+    # WebSocket代理 - SSH会话WebSocket
+    location ~ ^/api/v1/ws/ssh/sessions/.*/ws$ {
+        proxy_pass http://backend:8080$request_uri;
         proxy_http_version 1.1;
         
         # WebSocket必需的头部
