fix: 添加WebSocket配置以修复监控连接问题
- 在config.docker.yaml中添加websocket配置节
- 启用WebSocket服务（enable: true）
- 配置WebSocket路径为/api/v1/ws/monitor
- 设置心跳间隔和最大连接数
- 添加monitor配置节启用监控功能

--- a/docker/backend/config.docker.yaml
+++ b/docker/backend/config.docker.yaml
@@ -114,3 +114,16 @@ audit:
     - "reboot"
     - "passwd"
     - "userdel"
+
+# WebSocket配置
+websocket:
+  enable: true  # 启用WebSocket服务
+  port: 8080    # WebSocket端口（与主服务端口相同）
+  path: "/api/v1/ws/monitor"  # WebSocket路径
+  heartbeatInterval: 30  # 心跳间隔（秒）
+  maxConnections: 1000   # 最大连接数
+
+# 监控配置
+monitor:
+  enable: true  # 启用监控功能
+  maxConcurrentMonitors: 10  # 最大并发监控数
